@@ -268,6 +268,7 @@ Release Notes - Hive - Version 0.11.0
     * [HIVE-4500] - HS2 holding too many file handles of hive_job_log_hive_*.txt files
     * [HIVE-4505] - Hive can't load transforms added using 'ADD FILE'
     * [HIVE-4527] - Fix eclipse project template
+    * [HIVE-4784] - ant testreport doesn't include any HCatalog tests
 
 ** Improvement
     * [HIVE-581] - improve group by syntax
